--- a/Common.less
+++ b/Common.less
@@ -5567,6 +5567,9 @@ textarea.b-form-control {
 }
 
 .b-developer {
+  & a {
+    text-decoration: none;
+  }
   &s{
     padding-bottom: 2rem;
   }
@@ -5580,6 +5583,7 @@ textarea.b-form-control {
   display: table;
   width: 100%;
   padding: 3rem 0;
+
   &__heading {
     margin: 0 0 1rem 0;
   }
