--- a/Common.less
+++ b/Common.less
@@ -5580,12 +5580,10 @@ textarea.b-form-control {
 }
 
 .b-developer {
-
-  & a {
+  a {
     text-decoration: none;
   }
-  &s{
-  &s{
+  &s {
     padding-bottom: 2rem;
   }
   &__link-more {
@@ -5598,7 +5596,6 @@ textarea.b-form-control {
   display: table;
   width: 100%;
   padding: 3rem 0;
-
   &__heading {
     margin: 0 0 1rem 0;
   }
@@ -6029,7 +6026,6 @@ textarea.b-form-control {
   border: 1px solid #B2B2B2;
   margin-bottom: 2rem;
   &__name {
-
     padding: 2rem 0;
   }
   &-panel {
