--- a/Common.less
+++ b/Common.less
@@ -6040,7 +6040,8 @@ textarea.b-form-control {
     display: table;
     border-collapse: collapse;
     margin: 3rem 0 3rem -4rem;
-
+    font-size: 1.5rem;
+    color:#5c5c5c;
     &__cell {
       display: table-cell;
       padding: 0 4rem;
@@ -6089,6 +6090,8 @@ textarea.b-form-control {
     border-collapse: collapse;
     width: 100%;
     margin: 3rem 0;
+    font-size: 1.5rem;
+    color:#5c5c5c;
     &__cell {
       text-align: center;
       display: table-cell;
@@ -6161,6 +6164,7 @@ textarea.b-form-control {
   max-width: 100%;
   padding-right: 5rem;
   white-space: nowrap;
+  color:#4d4d4d;
   &_editing {
     width: 100%;
     .b-editable-field__inner {
@@ -6206,12 +6210,14 @@ textarea.b-form-control {
   }
 
   &__icon {
-    vertical-align: middle;
+
     display: inline-block;
     cursor: pointer;
-    height: 1.5rem;
+    height: 1.7rem;
     margin-left: 0.2rem;
+    margin-bottom: 0.3rem;
     position: relative;
+    vertical-align: middle;
     &:hover {
       .b-editable-field__icon-path {
         fill: @yellow_color;
