--- a/Common.less
+++ b/Common.less
@@ -5745,6 +5745,7 @@ textarea.b-form-control {
   max-width: 750px;
   margin: 0 auto;
   padding: 1rem 0 3rem;
+  
   img {
     margin: 4.5rem auto;
     display: block;
@@ -5781,6 +5782,38 @@ textarea.b-form-control {
       }
       background-color: @gray_l_color;
     }
+  }
+  &_job{
+	 max-width:590px;
+	 &__separator {
+		margin: 2rem 0;
+	 }
+	&__button{
+	margin-top:2.5rem;
+	}
+	 img {
+	  margin: 2rem 0;
+	 }
+	 p {
+		 margin:0;
+	 
+	 }
+	  .b-article_job__section-heading{
+	  
+	font-weight:bold;
+	 margin-top:2rem;
+	 font-size:1.5rem;
+	 margin-bottom:0;	 
+	 }
+	 
+	 
+	 ul {
+		padding-left:0;
+		li {
+			list-style-position: inside;
+			list-style-type: disc;
+		}
+	 }
   }
 }
 
