3 вкладки в личном кабинете, если включены коммерческие предложения

--- a/Common.less
+++ b/Common.less
@@ -2532,6 +2532,9 @@ html:not(.b-html_mobile) {
         .b-tabs__tab {
           //.make-xs-column(4, 5px);
           .make-xs-column(6, 5px);
+          &.three-tabs {
+            .make-xs-column(4, 5px);
+          }
           .b-tabs__link {
             color: #383838;
             padding: 0.5rem 0;
