--- a/Config.less
+++ b/Config.less
@@ -1,6 +1,6 @@
 
 
-@change-this-to-update-cache: 1222w2;
+@change-this-to-update-cache: 12;
 @font-size-base:          1.4rem;
 @font-size-large:         @font-size-base * 1.25; 
 @font-size-small:         @font-size-base * 0.85; 
