position relative для ячеек в таблице (фикс для стрелок в кп в каталоге)

--- a/css/catalog.css
+++ b/css/catalog.css
@@ -228,7 +228,11 @@ a.catalog-bar {
 h3{margin-top: 5px; margin-bottom: 0}
 p{margin-bottom: 0}
 
-.table-products td{ vertical-align: middle !important;   text-align: center;}
+.table-products td{
+    vertical-align: middle !important;
+    text-align: center;
+    position: relative;
+}
 
 
 .buy-arrow{
