remove old files

--- a/Common.less
+++ b/Common.less
@@ -3900,7 +3900,14 @@ textarea.b-form-control {
     background-attachment: scroll, scroll;
   }
 }
-
+.ui-tooltip {
+  padding-left: 0;
+  padding-right: 0;
+  border-radius: 0 !important;
+  background-color: transparent !important;
+  box-shadow: none !important;
+  border-width: 0 !important;
+}
 .b-advantages {
   position: relative;
 
@@ -3920,6 +3927,8 @@ textarea.b-form-control {
         margin-left: -8rem;
       }
     }
+
+
 
     &-wrapper {
       position: absolute;
