--- a/css/admin.css
+++ b/css/admin.css
@@ -187,6 +187,19 @@ h1 a{ color: #cccccc; }
 
 .admin-img-del{
     position: absolute;
+	z-index: 1000;
+}
+
+.admin-img-select{
+    position: absolute;
+	padding-left: 5px;
+	padding-top: 122px;
+	z-index: 900;
+}
+
+.admin-img-check{
+    width: 20px;
+	height: 20px;
 }
 
 .admin-banner-img-container{
