Jobs request design updated

--- a/Common.less
+++ b/Common.less
@@ -3831,7 +3831,7 @@ textarea.b-form-control {
   }
 }
 
-#work_email,
+#work_mail,
 #work_vacancy,
 #work_letter,
 #work_name {
@@ -3850,7 +3850,7 @@ textarea.b-form-control {
   padding-left: 1.5rem;
 
   &:hover {
-    background-color: @yellow_color;
+    background-color: rgba(red(#fff), green(#fff), blue(#fff), 0.5);
   }
 }
 
