Переделать слайдер в карточке товара

--- a/Common.less
+++ b/Common.less
@@ -4646,6 +4646,7 @@ textarea.b-form-control {
     //    border-top: 1px dotted @gray_color;
     border-bottom: 1px dotted @gray_color;
     text-align: center;
+    height:50rem;
 
     &:not(.b-goods-gallery_no-scroll) {
       cursor: url(https://mail.google.com/mail/images/2/openhand.cur), move;
@@ -4662,12 +4663,15 @@ textarea.b-form-control {
         cursor: inherit;
       }
     }
-
+    &__arrow{
+      bottom:25rem;
+    }
     &-item {
       display: inline-block;
-      margin-right: 0.4rem;
+
       position: relative;
       vertical-align: top;
+      height:50rem;
 
       &__layout {
         position: absolute;
