--- a/Helpers.less
+++ b/Helpers.less
@@ -51,6 +51,12 @@
   -webkit-transform: translate3d(@x, @y, @z);
           transform: translate3d(@x, @y, @z);
 }
+.transform(@transform) {
+  -webkit-transform: @transform;
+  -moz-transform: 	 @transform;
+  -ms-transform: 		 @transform;
+  -o-transform: 		 @transform;
+}
 .clearfix() {
     &:before, &:after {
         content: ".";
