поправил мминимальную ширину

--- a/Common.less
+++ b/Common.less
@@ -497,7 +497,7 @@ body {
 .b-layout {
   min-height: 100%;
   height: auto;
- // min-width: @screen-xs-max;
+  min-width: @screen-xs-max;
   position: relative;
 
   &_scrolled {
