Catalog LED strips fixed

--- a/Common.less
+++ b/Common.less
@@ -6563,3 +6563,21 @@ textarea.b-form-control {
         }
     }
 }
+
+.catalog {
+    &_series__h2 {
+        font-size: 2.6rem !important;
+        font-weight: 500;
+        letter-spacing: normal;
+        color: #484848;
+        font-family: Arial, sans-serif;
+    }
+
+    &_series__h3 {
+        font-size: 2.2rem !important;
+        font-weight: 500;
+        color: #484848;
+        letter-spacing: normal;
+        font-family:  Arial, sans-serif;
+    }
+}
