Мобильная версия сайта

--- a/Common.less
+++ b/Common.less
@@ -3967,7 +3967,7 @@ textarea.b-form-control {
     .b-footer-mobile-table {
         display: block;
         width: auto;
-        margin-left: 0 !important;
+        margin-left: -15px !important;
     }
 
     .b-footer-mobile-col {
