Link to link block header design updated

--- a/Common.less
+++ b/Common.less
@@ -6317,9 +6317,12 @@ background-color: @yellow_color;
     }
 
 .b-links__h2 {
-    font-size: 12px;
+    font-size: 16px;
     letter-spacing: normal;
     font-family: Arial, sans-serif;
+	text-decoration: none;
+	font-weight: bold;
+	padding-top: 20px;
 }
 
 .b-developer {
