Price request div block added

--- a/Common.less
+++ b/Common.less
@@ -7746,3 +7746,11 @@ background-color: @yellow_color;
         height: 1px;
     }
 }
+
+.b-price-requestable {
+	background-color: #dfdfe1;
+	padding: 4px;
+	margin-left: 2px;
+	margin-right: 2px;
+	font-size: 11px;
+}
