В мобильном каталоге ( превью ) для читабельности сделал "затемнение" картинки и ссылку сделал по размеру равной всей плашке

--- a/Common.less
+++ b/Common.less
@@ -5543,18 +5543,7 @@ textarea.b-form-control {
     }
 }
 
-.b-mobile-catalog {
-    &__item {
-        background-position: 100% 0;
-        background-repeat: no-repeat;
-        background-size: cover;
-        padding: 6.5rem 0 6.5rem 7.5rem;
-    }
 
-    &__link {
-        color: #565656;
-    }
-}
 
 .b-mobile-redirect-dialog {
     &__content {
@@ -5774,7 +5763,7 @@ textarea.b-form-control {
     background-position: 100% 0;
     background-repeat: no-repeat;
     background-size: auto 100%;
-    padding: 6.5rem 0 6.5rem 7.5rem;
+
     border-top: 1px dotted #6E7172;
 }
 
@@ -5787,9 +5776,15 @@ textarea.b-form-control {
 }
 
 .b-mobile-catalog__link {
-    font-size: 2rem;
-    cursor: pointer;
+  font-size: 2rem;
+  cursor: pointer;
+  color: #565656;
+  padding: 6.5rem 0 6.5rem 7.5rem;
+  display: block;
+  background-color: rgba(255, 255, 255, 0.7);
 }
+
+
 
 .b-mobile-redirect-dialog {
     padding: 1rem;
