Ссылка с длинным названием уезжала за пределы экрана на мобильных устройствах

--- a/Common.less
+++ b/Common.less
@@ -5779,8 +5779,9 @@ textarea.b-form-control {
   font-size: 2rem;
   cursor: pointer;
   color: #565656;
-  padding: 6.5rem 0 6.5rem 7.5rem;
+  padding: 6.5rem 2rem 6.5rem 7.5rem;
   display: block;
+  word-wrap: break-word;
   background-color: rgba(255, 255, 255, 0.7);
 }
 
